@@ -314,92 +314,6 @@
 	      </signal>
 	      <stock_item>GNOMEUIINFO_MENU_CLOSE_ITEM</stock_item>
 	    </widget>
-
-	    <widget>
-	      <class>GtkPixmapMenuItem</class>
-	      <name>exit2</name>
-	      <signal>
-		<name>activate</name>
-		<handler>exit_cb</handler>
-		<last_modification_time>Tue, 05 Dec 2000 02:53:49 GMT</last_modification_time>
-	      </signal>
-	      <stock_item>GNOMEUIINFO_MENU_EXIT_ITEM</stock_item>
-	    </widget>
-	  </widget>
-	</widget>
-
-	<widget>
-	  <class>GtkMenuItem</class>
-	  <name>view1</name>
-	  <stock_item>GNOMEUIINFO_MENU_VIEW_TREE</stock_item>
-
-	  <widget>
-	    <class>GtkMenu</class>
-	    <name>view1_menu</name>
-
-	    <widget>
-	      <class>GtkRadioMenuItem</class>
-	      <name>html_menu</name>
-	      <signal>
-		<name>activate</name>
-		<handler>html_menu_cb</handler>
-		<last_modification_time>Tue, 05 Dec 2000 02:53:49 GMT</last_modification_time>
-	      </signal>
-	      <label>HTML</label>
-	      <active>False</active>
-	      <always_show_toggle>True</always_show_toggle>
-	      <group>view_group</group>
-	    </widget>
-
-	    <widget>
-	      <class>GtkRadioMenuItem</class>
-	      <name>list_menu</name>
-	      <signal>
-		<name>activate</name>
-		<handler>icon_menu_cb</handler>
-		<last_modification_time>Tue, 05 Dec 2000 02:53:49 GMT</last_modification_time>
-	      </signal>
-	      <label>Icon List</label>
-	      <active>False</active>
-	      <always_show_toggle>True</always_show_toggle>
-	      <group>view_group</group>
-	    </widget>
-
-	    <widget>
-	      <class>GtkRadioMenuItem</class>
-	      <name>tree_menu</name>
-	      <signal>
-		<name>activate</name>
-		<handler>tree_menu_cb</handler>
-		<last_modification_time>Tue, 05 Dec 2000 02:53:49 GMT</last_modification_time>
-	      </signal>
-	      <label>Tree</label>
-	      <active>True</active>
-	      <always_show_toggle>True</always_show_toggle>
-	      <group>view_group</group>
-	    </widget>
-	  </widget>
-	</widget>
-
-	<widget>
-	  <class>GtkMenuItem</class>
-	  <name>settings1</name>
-	  <stock_item>GNOMEUIINFO_MENU_SETTINGS_TREE</stock_item>
-
-	  <widget>
-	    <class>GtkMenu</class>
-	    <name>settings1_menu</name>
-
-	    <widget>
-	      <class>GtkPixmapMenuItem</class>
-	      <name>preferences1</name>
-	      <signal>
-		<name>activate</name>
-		<handler>prefs_menu_cb</handler>
-		<last_modification_time>Tue, 05 Dec 2000 02:53:49 GMT</last_modification_time>
-	      </signal>
-	      <stock_item>GNOMEUIINFO_MENU_PREFERENCES_ITEM</stock_item>
-	    </widget>
 	  </widget>
 	</widget>
 
