@@ -1,3 +1,15 @@
+2001-07-19  Richard Hestilow  <hestilow@ximian.com>
+
+	* Removed debugging spew.
+
+	* Removed most of the menu bar.
+
+	* capplet-dir-view.c (about_menu_cb): Add Chema, jimmac, and myself
+	to authors list.
+
+	* capplet-dir-view-html.c (html_populate, html_write_row): Spacing
+	fix.
+
 2001-07-19  Bradford Hovinen  <hovinen@ximian.com>
 
 	* Makefile.am (EXTRA_DIST): Added missing Gnome.directory.in.in
